--- a/swift-algorand-sdk-ios-showcase/Base.lproj/Main.storyboard
+++ b/swift-algorand-sdk-ios-showcase/Base.lproj/Main.storyboard
@@ -184,13 +184,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kls-bj-eDH">
-                                <rect key="frame" x="231" y="685" width="150" height="126"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ks-Ov-imX">
                                 <rect key="frame" x="30" y="169" width="148" height="126"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -263,6 +256,14 @@
                                     <action selector="transferFromAccount1to3:" destination="gxD-hL-igz" eventType="touchUpInside" id="OB3-Ba-1hf"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Igh-ep-IOf">
+                                <rect key="frame" x="225" y="680" width="148" height="126"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Dpr-C7-Bo3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -270,7 +271,7 @@
                     <navigationItem key="navigationItem" id="usi-Hi-053"/>
                     <connections>
                         <outlet property="assetIDLabel" destination="aiJ-uZ-EoI" id="rXh-0J-Vca"/>
-                        <outlet property="infoLabel" destination="kls-bj-eDH" id="5sa-7c-HuE"/>
+                        <outlet property="infoLabel" destination="Igh-ep-IOf" id="fMh-Ju-Xwu"/>
                         <outlet property="networkLabel" destination="4La-JA-7ke" id="4Gm-c3-b3i"/>
                     </connections>
                 </viewController>
@@ -648,8 +649,17 @@
                                     <action selector="createMultisigAddress:" destination="TLn-tw-ch3" eventType="touchUpInside" id="Q4W-MV-1gq"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f43-TH-Nf5">
+                                <rect key="frame" x="10" y="433" width="394" height="30"/>
+                                <state key="normal" title=" Fund Multisig Address">
+                                    <color key="titleColor" systemColor="opaqueSeparatorColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="fundMultisigAddress:" destination="TLn-tw-ch3" eventType="touchUpInside" id="VAU-wU-fYv"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mSY-Dl-rP9">
-                                <rect key="frame" x="45" y="433" width="359" height="30"/>
+                                <rect key="frame" x="45" y="479" width="359" height="30"/>
                                 <state key="normal" title="Senf from Multisig to Account 2">
                                     <color key="titleColor" systemColor="opaqueSeparatorColor"/>
                                 </state>
@@ -682,7 +692,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="087-tr-IDa">
-                                <rect key="frame" x="45" y="530" width="329" height="280"/>
+                                <rect key="frame" x="45" y="538" width="329" height="280"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -695,8 +705,10 @@
                         <constraints>
                             <constraint firstItem="ERP-G7-ovg" firstAttribute="top" secondItem="dkR-aC-ufR" secondAttribute="bottom" constant="8" symbolic="YES" id="3pB-rp-NGf"/>
                             <constraint firstItem="nTa-N1-od1" firstAttribute="leading" secondItem="bCl-2R-3vh" secondAttribute="trailing" constant="10" id="7r9-Pw-91s"/>
+                            <constraint firstItem="dmU-PC-fIU" firstAttribute="trailing" secondItem="f43-TH-Nf5" secondAttribute="trailing" constant="10" id="8vD-Ys-MMl"/>
                             <constraint firstItem="mSY-Dl-rP9" firstAttribute="leading" secondItem="dmU-PC-fIU" secondAttribute="leading" constant="45" id="912-VZ-Pmq"/>
                             <constraint firstItem="3i5-K9-V2v" firstAttribute="top" secondItem="QJR-wc-j0i" secondAttribute="bottom" constant="5" id="Bk9-Cf-cPV"/>
+                            <constraint firstItem="mSY-Dl-rP9" firstAttribute="top" secondItem="f43-TH-Nf5" secondAttribute="bottom" constant="16" id="CUz-4F-kI7"/>
                             <constraint firstItem="dmU-PC-fIU" firstAttribute="trailing" secondItem="ERP-G7-ovg" secondAttribute="trailing" id="EHx-FH-bRr"/>
                             <constraint firstItem="dmU-PC-fIU" firstAttribute="trailing" secondItem="mSY-Dl-rP9" secondAttribute="trailing" constant="10" id="EPP-M1-8TN"/>
                             <constraint firstItem="dmU-PC-fIU" firstAttribute="trailing" secondItem="YIL-ub-Cyd" secondAttribute="trailing" id="EoP-sA-0pb"/>
@@ -712,6 +724,7 @@
                             <constraint firstAttribute="trailing" secondItem="KyY-ng-AAP" secondAttribute="trailing" id="W6p-LC-17f"/>
                             <constraint firstItem="KG1-eK-utJ" firstAttribute="top" secondItem="tVI-2x-kr8" secondAttribute="bottom" constant="3" id="XC4-4w-kyI"/>
                             <constraint firstItem="dkR-aC-ufR" firstAttribute="leading" secondItem="ec2-Dx-hdg" secondAttribute="leading" id="YWS-Ni-NP8"/>
+                            <constraint firstItem="f43-TH-Nf5" firstAttribute="top" secondItem="KG1-eK-utJ" secondAttribute="bottom" constant="6" id="YY1-O5-Vva"/>
                             <constraint firstItem="dkR-aC-ufR" firstAttribute="leading" secondItem="QJR-wc-j0i" secondAttribute="leading" id="cFi-Y2-VeN"/>
                             <constraint firstItem="prJ-ka-DBx" firstAttribute="leading" secondItem="3i5-K9-V2v" secondAttribute="trailing" constant="10" id="clB-YA-Mcu"/>
                             <constraint firstItem="nTa-N1-od1" firstAttribute="top" secondItem="prJ-ka-DBx" secondAttribute="bottom" constant="8" symbolic="YES" id="cvV-QN-ewD"/>
@@ -720,7 +733,6 @@
                             <constraint firstItem="bCl-2R-3vh" firstAttribute="top" secondItem="3i5-K9-V2v" secondAttribute="bottom" constant="8" symbolic="YES" id="gy1-FE-ZeZ"/>
                             <constraint firstItem="tVI-2x-kr8" firstAttribute="top" secondItem="bCl-2R-3vh" secondAttribute="bottom" constant="51" id="hoC-XT-DHH"/>
                             <constraint firstItem="KG1-eK-utJ" firstAttribute="leading" secondItem="dmU-PC-fIU" secondAttribute="leading" constant="45" id="jZa-DR-151"/>
-                            <constraint firstItem="mSY-Dl-rP9" firstAttribute="top" secondItem="KG1-eK-utJ" secondAttribute="bottom" constant="6" id="jnK-OZ-ehN"/>
                             <constraint firstItem="YIL-ub-Cyd" firstAttribute="leading" secondItem="nTa-N1-od1" secondAttribute="trailing" constant="8" symbolic="YES" id="mlo-QE-cJO"/>
                             <constraint firstItem="dkR-aC-ufR" firstAttribute="top" secondItem="mAL-pU-i5b" secondAttribute="top" constant="172" id="n1S-fb-4m3"/>
                             <constraint firstItem="dkR-aC-ufR" firstAttribute="top" secondItem="ec2-Dx-hdg" secondAttribute="bottom" constant="33.5" id="ppY-vN-J4K"/>
@@ -728,6 +740,7 @@
                             <constraint firstItem="UeB-fb-5eC" firstAttribute="top" secondItem="dkR-aC-ufR" secondAttribute="bottom" constant="8" symbolic="YES" id="ttu-0n-ll4"/>
                             <constraint firstItem="KyY-ng-AAP" firstAttribute="leading" secondItem="prJ-ka-DBx" secondAttribute="trailing" constant="10" id="v4S-Js-VcI"/>
                             <constraint firstItem="dmU-PC-fIU" firstAttribute="trailing" secondItem="KG1-eK-utJ" secondAttribute="trailing" constant="10" id="vkl-GR-6el"/>
+                            <constraint firstItem="f43-TH-Nf5" firstAttribute="leading" secondItem="dmU-PC-fIU" secondAttribute="leading" constant="10" id="y23-Je-A3C"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3Lm-aG-Pjf"/>
@@ -738,6 +751,7 @@
                         <outlet property="account2GetAccountBalanceButton" destination="KyY-ng-AAP" id="zHD-0W-lAs"/>
                         <outlet property="account3FundsNeededButton" destination="nTa-N1-od1" id="UYO-2z-h2q"/>
                         <outlet property="account3GetAccountBalanceButton" destination="YIL-ub-Cyd" id="CVl-gt-bOw"/>
+                        <outlet property="fundMultisigButton" destination="f43-TH-Nf5" id="NOd-Fo-60h"/>
                         <outlet property="generateAccount1Button" destination="QJR-wc-j0i" id="9RW-cH-h1d"/>
                         <outlet property="generateAccount2Button" destination="3i5-K9-V2v" id="vOi-tP-XRr"/>
                         <outlet property="generateAccount3Button" destination="bCl-2R-3vh" id="dlV-NI-cto"/>
